Fixed Color Contrast
Updated CSS to change the color of h6 elements to match p elements.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a:active {
   text-decoration: none;
 }
 
-p{
+p, h6 {
   color: #a0a3a6;
 }
     
